--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
+  },
   "dependencies": {
-    "@strapi/strapi": "4.17.0",
-    "@strapi/plugin-users-permissions": "4.17.0",
-    "@strapi/plugin-i18n": "4.17.0",
     "@strapi/plugin-cloud": "4.17.0",
+    "@strapi/plugin-i18n": "4.17.0",
+    "@strapi/plugin-users-permissions": "4.17.0",
+    "@strapi/strapi": "4.17.0",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
