--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {
-    "@faker-js/faker": "^8.3.1"
-  },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@strapi/plugin-cloud": "4.17.0",
     "@strapi/plugin-i18n": "4.17.0",
     "@strapi/plugin-users-permissions": "4.17.0",
